# kamerka

./: AUTHORS  Button.qml  CMakeLists.txt  ChangeLog  INSTALL  README  TODO  capturethread.cpp  capturethread.h  extract-messages.sh  index.html  kamerka.desktop  kamerka.pot  kamerka.pro  kamerka.qml  kamerka.qrc  main.cpp  mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h
data/: CMakeLists.txt  kamerka.1  kamerka.desktop  kamerka.notifyrc
debian/: changelog  control  copyright  menu  rules  watch
modules/: FindLibAvCodec.cmake  FindLibAvFormat.cmake  FindLibAvUtil.cmake  FindLibV4LConvert.cmake  FindQImageBlitz.cmake
po/: CMakeLists.txt  cs.po  de.po  es.po  extract-messages.sh  kamerka.pot  kamerka_cs.po  kamerka_de.po  kamerka_es.po  kamerka_nl.po  kamerka_pl.po  kamerka_sr.po  kamerka_sr@ijekavian.po  kamerka_sr@ijekavianlatin.po  kamerka_sr@latin.po  kamerka_zh_TW.po  nl.po  pl.po  pt.po  ru.po  sr.po  sr@ijekavian.po  sr@ijekavianlatin.po  sr@latin.po  uk.po  zh_CN.po  zh_TW.po
src/: Button.qml  CMakeLists.txt  KamerkaSettings.kcfg  KamerkaSettings.kcfgc  capturethread.cpp  capturethread.h  imageeffect.cpp  imageeffect.h  kamerka.kcfg  kamerka.kcfgc  kamerka.qml  kamerka.qrc  main.cpp  mainwindow.cpp  mainwindow.h  settings.kcfgc  settingsdialog.cpp  settingsdialog.h  videowidget.cpp  videowidget.h
tools/: extract-messages.sh  gitlog2changelog.py
